creating and styling navbar for home page

--- a/dating_website_frontend/home.html
+++ b/dating_website_frontend/home.html
@@ -10,7 +10,19 @@
 <body>
   <!-- nav bar -->
   <nav class="nabar">
-    
+    <div class="nav-content">
+      <div class="logo">
+        <img src="assets/logo-light.svg" alt="logo">
+      </div>
+      <div class="links">
+        <ul>
+          <li><a href="home.html" class="active">Home</a></li>
+          <li><a href="favorite.html">Favorite</a></li>
+          <li><a href="chat.html">Chat</a></li>
+        </ul>
+      </div>
+    </div>
+    <button class="logout-btn">Logout</button>
   </nav>
 
 </body>
