creating and styling main scetion/card and footer  for home page

--- a/dating_website_frontend/home.html
+++ b/dating_website_frontend/home.html
@@ -25,6 +25,119 @@
     <button class="logout-btn">Logout</button>
   </nav>
 
+  <!-- end nav bar  -->
+  <!-- main section surf pepole -->
+  <section class="main">
+
+    <div class="card">
+      <div class="card-header">
+        <img src="assets/client.png" alt="img">
+      </div>
+      <div class="card-body">
+        <p>Name:<span>You</span></p>
+        <p>Bio:<span>NA</span></p>
+        <p>Age:<span>29</span></p>
+        <p>Locaton:<span>LA</span></p>
+      </div>
+      <div class="card-footer">
+        <button class="card-btn" id="chat_btn">Chat</button>
+        <button class="card-btn" id="bock_btn">Block</button>
+        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <img src="assets/client.png" alt="img">
+      </div>
+      <div class="card-body">
+        <p>Name:<span>You</span></p>
+        <p>Bio:<span>NA</span></p>
+        <p>Age:<span>29</span></p>
+        <p>Locaton:<span>LA</span></p>
+      </div>
+      <div class="card-footer">
+        <button class="card-btn" id="chat_btn">Chat</button>
+        <button class="card-btn" id="bock_btn">Block</button>
+        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <img src="assets/client.png" alt="img">
+      </div>
+      <div class="card-body">
+        <p>Name:<span>You</span></p>
+        <p>Bio:<span>NA</span></p>
+        <p>Age:<span>29</span></p>
+        <p>Locaton:<span>LA</span></p>
+      </div>
+      <div class="card-footer">
+        <button class="card-btn" id="chat_btn">Chat</button>
+        <button class="card-btn" id="bock_btn">Block</button>
+        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <img src="assets/client.png" alt="img">
+      </div>
+      <div class="card-body">
+        <p>Name:<span>You</span></p>
+        <p>Bio:<span>NA</span></p>
+        <p>Age:<span>29</span></p>
+        <p>Locaton:<span>LA</span></p>
+      </div>
+      <div class="card-footer">
+        <button class="card-btn" id="chat_btn">Chat</button>
+        <button class="card-btn" id="bock_btn">Block</button>
+        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
+      </div>
+    </div>
+
+    
+    <div class="card">
+      <div class="card-header">
+        <img src="assets/client.png" alt="img">
+      </div>
+      <div class="card-body">
+        <p>Name:<span>You</span></p>
+        <p>Bio:<span>NA</span></p>
+        <p>Age:<span>29</span></p>
+        <p>Locaton:<span>LA</span></p>
+      </div>
+      <div class="card-footer">
+        <button class="card-btn" id="chat_btn">Chat</button>
+        <button class="card-btn" id="bock_btn">Block</button>
+        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <img src="assets/client.png" alt="img">
+      </div>
+      <div class="card-body">
+        <p>Name:<span>You</span></p>
+        <p>Bio:<span>NA</span></p>
+        <p>Age:<span>29</span></p>
+        <p>Locaton:<span>LA</span></p>
+      </div>
+      <div class="card-footer">
+        <button class="card-btn" id="chat_btn">Chat</button>
+        <button class="card-btn" id="bock_btn">Block</button>
+        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
+      </div>
+    </div>
+
+  </section>
+  <!-- end main section -->
+
+  <!-- footer -->
+  <footer class="footer">
+    <p>Copyright © 2022 FSW Cycle#21</p>
+  </footer>
+
 </body>
 
 </html>
