--- a/dating_website_frontend/chat.html
+++ b/dating_website_frontend/chat.html
@@ -16,9 +16,9 @@
       </div>
       <div class="links">
         <ul>
-          <li><a href="home.html" class="active">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a href="favorite.html">Favorite</a></li>
-          <li><a href="chat.html">Chat</a></li>
+          <li><a href="chat.html"  class="active">Chat</a></li>
         </ul>
       </div>
     </div>
@@ -30,7 +30,7 @@
   <section class="main">
     <div class="left-panel">
 
-      <div class="user">
+      <div class="user selected">
         <div class="img">
           <img src="assets/client.png" alt="img">
         </div>
@@ -88,19 +88,47 @@
 
 
     </div>
-    
-    <div class="message-box">
-      <div class="messages">
-        <div class="received">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
 
-        <div class="send">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
+    <div class="message-box">
+
+      <div class="received">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
       </div>
+
+      <div class="send">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur molestiae dicta quo reiciendis iste, vel impedit, laudantium aliquam exercitationem, temporibus sint quibusdam! Incidunt cum sint veniam nam tenetur eligendi recusandae!</span></div>
+      </div>
+      <div class="send">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
+      </div>
+      <div class="send">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
+      </div>
+      <div class="received">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
+      </div>  <div class="send">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
+      </div>
+      <div class="received">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
+      </div>  <div class="send">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
+      </div>
+      <div class="received">
+        <div class="date"><span>17/8/2018</span></div>
+        <div class="text"><span>hi</span></div>
+      </div>
+
+
+
       <div class="new-message">
         <input type="text" placeholder="Enter message" class="input">
         <button class="send-message">Send!</button>
