Editing general style value

--- a/dating_website_frontend/favorite.html
+++ b/dating_website_frontend/favorite.html
@@ -16,8 +16,8 @@
       </div>
       <div class="links">
         <ul>
-          <li><a href="home.html" class="active">Home</a></li>
-          <li><a href="favorite.html">Favorite</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="favorite.html" class="active">Favorite</a></li>
           <li><a href="chat.html">Chat</a></li>
         </ul>
       </div>
@@ -26,26 +26,9 @@
   </nav>
 
   <!-- end nav bar  -->
-  <!-- main section surf pepole -->
-  <section class="main">
-
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-
+  <!-- main section surf fav -->
+  <p class="unfav">Click on like to remove from favorite section</p> 
+  <section class="main fav">
     <div class="card">
       <div class="card-header">
         <img src="assets/client.png" alt="img">
@@ -78,7 +61,22 @@
         <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
       </div>
     </div>
-
+    <div class="card">
+      <div class="card-header">
+        <img src="assets/client.png" alt="img">
+      </div>
+      <div class="card-body">
+        <p>Name:<span>You</span></p>
+        <p>Bio:<span>NA</span></p>
+        <p>Age:<span>29</span></p>
+        <p>Locaton:<span>LA</span></p>
+      </div>
+      <div class="card-footer">
+        <button class="card-btn" id="chat_btn">Chat</button>
+        <button class="card-btn" id="bock_btn">Block</button>
+        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
+      </div>
+    </div>
     <div class="card">
       <div class="card-header">
         <img src="assets/client.png" alt="img">
@@ -97,38 +95,7 @@
     </div>
 
 
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
+
 
   </section>
   <!-- end main section -->
