--- a/dating_website_frontend/login.html
+++ b/dating_website_frontend/login.html
@@ -19,16 +19,18 @@
       <div class="group">
         <div class="form-group">
           <label for="login_email">Email</label>
-          <input type="email" id="login_email" class="input" placeholder="Enter Your Email" required>
+          <input type="email" id="login_email" class="input " placeholder="Enter Your Email" required>
         </div>
         <div class="form-group">
           <label for="login_password">Password</label>
           <input type="password" id="login_password" class="input" placeholder="Enter Your Password" required>
         </div>
-        <button class="login-btn">Login!</button>
+        <button class="login-btn" id="login_btn">Login!</button>
         <button class="create-new" id="new_account">Create Your Account</button>
+        <p class="d-none error" id="error">Some Thing Is Wrong</p>
       </div>
     </div>
+
 
   </section>
 
