Frontend: get interested user and load them on screen as card

--- a/dating_website_frontend/chat.html
+++ b/dating_website_frontend/chat.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="home.html">Home</a></li>
           <li><a href="favorite.html">Favorite</a></li>
-          <li><a href="chat.html"  class="active">Chat</a></li>
+          <li><a href="chat.html" class="active">Chat</a></li>
         </ul>
       </div>
     </div>
@@ -27,114 +27,119 @@
 
 
   <!-- main section chating -->
-  <section class="main">
-    <div class="left-panel">
+  <section class="chat">
+    <div class="main">
+      <div class="left-panel">
 
-      <div class="user selected">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+        <div class="user selected">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
         </div>
-        <span>Name</span>
+
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+        <div class="user">
+          <div class="img">
+            <img src="assets/client.png" alt="img">
+          </div>
+          <span>Name</span>
+        </div>
+
+
       </div>
 
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+      <div class="message-box">
+
+        <div class="received">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
         </div>
-        <span>Name</span>
-      </div>
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+
+        <div class="send">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur molestiae
+              dicta quo reiciendis iste, vel impedit, laudantium aliquam exercitationem, temporibus sint quibusdam!
+              Incidunt cum sint veniam nam tenetur eligendi recusandae!</span></div>
         </div>
-        <span>Name</span>
-      </div>
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+        <div class="send">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
         </div>
-        <span>Name</span>
-      </div>
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+        <div class="send">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
         </div>
-        <span>Name</span>
-      </div>
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+        <div class="received">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
         </div>
-        <span>Name</span>
-      </div>
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+        <div class="send">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
         </div>
-        <span>Name</span>
-      </div>
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+        <div class="received">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
         </div>
-        <span>Name</span>
-      </div>
-      <div class="user">
-        <div class="img">
-          <img src="assets/client.png" alt="img">
+        <div class="send">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
         </div>
-        <span>Name</span>
-      </div>
+        <div class="received">
+          <div class="date"><span>17/8/2018</span></div>
+          <div class="text"><span>hi</span></div>
+        </div>
 
 
+
+        <div class="new-message">
+          <input type="text" placeholder="Enter message" class="input">
+          <button class="send-message">Send!</button>
+        </div>
+      </div>
     </div>
-
-    <div class="message-box">
-
-      <div class="received">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>
-
-      <div class="send">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur molestiae dicta quo reiciendis iste, vel impedit, laudantium aliquam exercitationem, temporibus sint quibusdam! Incidunt cum sint veniam nam tenetur eligendi recusandae!</span></div>
-      </div>
-      <div class="send">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>
-      <div class="send">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>
-      <div class="received">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>  <div class="send">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>
-      <div class="received">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>  <div class="send">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>
-      <div class="received">
-        <div class="date"><span>17/8/2018</span></div>
-        <div class="text"><span>hi</span></div>
-      </div>
-
-
-
-      <div class="new-message">
-        <input type="text" placeholder="Enter message" class="input">
-        <button class="send-message">Send!</button>
-      </div>
-    </div>
-
   </section>
 
   <!-- end nav bar  -->
