--- a/dating_website_frontend/favorite.html
+++ b/dating_website_frontend/favorite.html
@@ -28,74 +28,27 @@
   <!-- end nav bar  -->
   <!-- main section surf fav -->
   <p class="unfav">Click on like to remove from favorite section</p>
-  <section class="main fav">
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
+  <section class="favorite">
+    <div class="main fav">
 
+      <div class="card">
+        <div class="card-header">
+          <img src="assets/client.png" alt="img">
+        </div>
+        <div class="card-body">
+          <p>Name:<span>You</span></p>
+          <p>Bio:<span>NA</span></p>
+          <p>Age:<span>29</span></p>
+          <p>Locaton:<span>LA</span></p>
+        </div>
+        <div class="card-footer">
+          <button class="card-btn" id="chat_btn">Chat</button>
+          <button class="card-btn" id="bock_btn">Block</button>
+          <div class="like" id="like_btn"><img src="assets/dislike.png" alt="like"></div>
+        </div>
+      </div>
 
-
+    </div>
 
   </section>
   <!-- end main section -->
