--- a/dating_website_frontend/home.html
+++ b/dating_website_frontend/home.html
@@ -27,108 +27,10 @@
 
   <!-- end nav bar  -->
   <!-- main section surf pepole -->
-  <section class="main">
+  <section class="home">
 
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
+    <div class="main" id="main"></div>
 
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-
-
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="assets/client.png" alt="img">
-      </div>
-      <div class="card-body">
-        <p>Name:<span>You</span></p>
-        <p>Bio:<span>NA</span></p>
-        <p>Age:<span>29</span></p>
-        <p>Locaton:<span>LA</span></p>
-      </div>
-      <div class="card-footer">
-        <button class="card-btn" id="chat_btn">Chat</button>
-        <button class="card-btn" id="bock_btn">Block</button>
-        <div class="like" id="like_btn"><img src="assets/heart.png" alt="like"></div>
-      </div>
-    </div>
 
   </section>
   <!-- end main section -->
@@ -140,6 +42,8 @@
 
   <script src="scripts/axios.min.js"></script>
   <script src="scripts/index.js"></script>
+  <script src="scripts/home.js"></script>
+
 
 </body>
 
