--- a/dating_website_frontend/home.html
+++ b/dating_website_frontend/home.html
@@ -22,7 +22,7 @@
         </ul>
       </div>
     </div>
-    <button class="logout-btn">Logout</button>
+    <button class="logout-btn" id="logout">Logout</button>
   </nav>
 
   <!-- end nav bar  -->
