Frontend: Adding JS  to link Favorite page with API backend and get all  Favorite  user

--- a/dating_website_frontend/favorite.html
+++ b/dating_website_frontend/favorite.html
@@ -22,31 +22,13 @@
         </ul>
       </div>
     </div>
-    <button class="logout-btn">Logout</button>
+    <button class="logout-btn" id="logout">Logout</button>
   </nav>
 
   <!-- end nav bar  -->
   <!-- main section surf fav -->
-  <p class="unfav">Click on like to remove from favorite section</p>
   <section class="favorite">
-    <div class="main fav">
-
-      <div class="card">
-        <div class="card-header">
-          <img src="assets/client.png" alt="img">
-        </div>
-        <div class="card-body">
-          <p>Name:<span>You</span></p>
-          <p>Bio:<span>NA</span></p>
-          <p>Age:<span>29</span></p>
-          <p>Locaton:<span>LA</span></p>
-        </div>
-        <div class="card-footer">
-          <button class="card-btn" id="chat_btn">Chat</button>
-          <button class="card-btn" id="bock_btn">Block</button>
-          <div class="like" id="like_btn"><img src="assets/dislike.png" alt="like"></div>
-        </div>
-      </div>
+    <div class="main fav" id="main">
 
     </div>
 
@@ -61,6 +43,8 @@
 
   <script src="scripts/axios.min.js"></script>
   <script src="scripts/index.js"></script>
+  <script src="scripts/favorite.js"></script>
+
 
 </body>
 
