Frontend: Getting names of all users who we send or receive messages from him and load them in page

--- a/dating_website_frontend/chat.html
+++ b/dating_website_frontend/chat.html
@@ -29,64 +29,10 @@
   <!-- main section chating -->
   <section class="chat">
     <div class="main">
-      <div class="left-panel">
+      <div class="left-panel" id="left_panel">
 
-        <div class="user selected">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-        <div class="user">
-          <div class="img">
-            <img src="assets/client.png" alt="img">
-          </div>
-          <span>Name</span>
-        </div>
-
+       
+ 
 
       </div>
 
@@ -151,6 +97,8 @@
 
   <script src="scripts/axios.min.js"></script>
   <script src="scripts/index.js"></script>
+  <script src="scripts/chat.js"></script>
+
 
 </body>
 
