Frontend: Linking Api 'messages' with JS to let  user can get all chat with other users 'load them on page' by clicking on their name in the chat page

--- a/dating_website_frontend/chat.html
+++ b/dating_website_frontend/chat.html
@@ -31,59 +31,14 @@
     <div class="main">
       <div class="left-panel" id="left_panel">
 
-       
- 
-
       </div>
 
-      <div class="message-box">
-
-        <div class="received">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
-
-        <div class="send">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur molestiae
-              dicta quo reiciendis iste, vel impedit, laudantium aliquam exercitationem, temporibus sint quibusdam!
-              Incidunt cum sint veniam nam tenetur eligendi recusandae!</span></div>
-        </div>
-        <div class="send">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
-        <div class="send">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
-        <div class="received">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
-        <div class="send">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
-        <div class="received">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
-        <div class="send">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
-        <div class="received">
-          <div class="date"><span>17/8/2018</span></div>
-          <div class="text"><span>hi</span></div>
-        </div>
+      <div class="message-box" id="message_box">
 
 
 
-        <div class="new-message">
-          <input type="text" placeholder="Enter message" class="input">
-          <button class="send-message">Send!</button>
-        </div>
+
+
       </div>
     </div>
   </section>
