Frontend: Adding chat from the home page to message new user that are not in the chat page

--- a/dating_website_frontend/chat.html
+++ b/dating_website_frontend/chat.html
@@ -30,14 +30,19 @@
   <section class="chat">
     <div class="main">
       <div class="left-panel" id="left_panel">
-
+        <div class="no_message sm">
+          <p>No Message Yet</p>
+          <img src="assets/no.png">
+        </div>
       </div>
 
       <div class="message-box" id="message_box">
-
-
+        <div class="no_message">
+          <p>No Message Yet</p>
+          <img src="assets/no.png">
+        </div>
       </div>
-      
+
     </div>
   </section>
 
