--- a/dating_website_frontend/home.html
+++ b/dating_website_frontend/home.html
@@ -86,6 +86,15 @@
                 <label for="interested-female">Female</label>
               </div>
 
+              <div class="form-group">
+                <p>Invisible In :</p>
+                <input type="radio" class="input-radio" name="invisible" id="invisible" value="male">
+                <label for="interested-male">True</label>
+                <input type="radio" class="input-radio" name="invisible" id="invisible" value="female"
+                  checked="checked">
+                <label for="interested-female">False</label>
+              </div>
+
             </div>
           </div>
 
