Adding Screenshot while the website is working

--- a/dating_website_frontend/favorite.html
+++ b/dating_website_frontend/favorite.html
@@ -22,8 +22,11 @@
         </ul>
       </div>
     </div>
-    <button class="logout-btn" id="logout">Logout</button>
+    <button class="nav-btn" id="edit">Edit Profile</button>
+    <button class="nav-btn" id="logout">Logout</button>
+
   </nav>
+
 
   <!-- end nav bar  -->
   <!-- main section surf fav -->
