--- a/dating_website_frontend/chat.html
+++ b/dating_website_frontend/chat.html
@@ -16,13 +16,15 @@
       </div>
       <div class="links">
         <ul>
-          <li><a href="home.html">Home</a></li>
+          <li><a href="home.html" >Home</a></li>
           <li><a href="favorite.html">Favorite</a></li>
           <li><a href="chat.html" class="active">Chat</a></li>
         </ul>
       </div>
     </div>
-    <button class="logout-btn" id="logout">Logout</button>
+    <button class="nav-btn" id="edit">Edit Profile</button>
+    <button class="nav-btn" id="logout">Logout</button>
+
   </nav>
 
 
