--- a/dating_website_frontend/home.html
+++ b/dating_website_frontend/home.html
@@ -87,12 +87,12 @@
               </div>
 
               <div class="form-group">
-                <p>Invisible In :</p>
-                <input type="radio" class="input-radio" name="invisible" id="invisible" value="male">
-                <label for="interested-male">True</label>
-                <input type="radio" class="input-radio" name="invisible" id="invisible" value="female"
+                <p>Invisible</p>
+                <input type="radio" class="input-radio" name="invisible" id="invisible_1" value="male">
+                <label for="invisible_1">True</label>
+                <input type="radio" class="input-radio" name="invisible" id="invisible_2" value="female"
                   checked="checked">
-                <label for="interested-female">False</label>
+                <label for="invisible_2">False</label>
               </div>
 
             </div>
